--- a/game/static/game/game_phaser.html
+++ b/game/static/game/game_phaser.html
@@ -54,7 +54,8 @@
             autoCenter: Phaser.Scale.CENTER_BOTH,
             width: 1920,
             height: 1080
-        }
+        },
+        backgroundColor: "#678986"
     };
 
     // Objeto de juego global
@@ -138,6 +139,7 @@
         this.load.image('card-back', "{% static 'card-back.png' %}")
         this.load.image('draw-card', "{% static 'draw-card.png' %}")
         this.load.image('end-turn', "{% static 'end-turn.png' %}")
+        this.load.image('forced-draw', "{% static 'forced-draw.png' %}")
 
         this.load.html('form', "{% static 'game/form.html' %}");
     }
@@ -160,7 +162,7 @@
         drawChatbox()
         
         // Crea el form para enviar mensajes de chat
-        var element = this.add.dom(400, 100).createFromCache('form');
+        var element = this.add.dom(200, 575).createFromCache('form');
         element.setScale(2, 2);
 
         // Callback cuando pones una letra en el input de chat
@@ -197,10 +199,10 @@
         // Crea los objetos texto
         // TODO Como empieza a mostrar desde el "principio", si los mensajes son largos a veces no te muestra el último mensaje enviado
         var messages_left_to_display = Math.min(max_messages_displayed, chat_messages.length)
-        var next_offset = 100
+        var next_offset = 300
         i = 0
         while (messages_left_to_display > 0) {
-            var last_text = scene.add.text(1920 - 300, next_offset, chat_messages[chat_offset + i], {fontSize: chat_text_size, fontFamily: 'Arial', wordWrap: { width: word_wrap_width, useAdvancedWrap: true }})
+            var last_text = scene.add.text(20, next_offset, chat_messages[chat_offset + i], {fontSize: chat_text_size, fontFamily: 'Arial', wordWrap: { width: word_wrap_width, useAdvancedWrap: true }})
             var result = last_text.getWrappedText(chat_messages[chat_offset + i])
             chat_group.add(last_text)
             next_offset += result.length * 25
