--- a/game/static/game/game_phaser.html
+++ b/game/static/game/game_phaser.html
@@ -142,6 +142,7 @@
         this.load.image('forced-draw', "{% static 'forced-draw.png' %}")
 
         this.load.html('form', "{% static 'game/form.html' %}");
+        this.load.html('chatdiv', "{% static 'game/chatdiv.html' %}");
     }
 
     // Inicializa el juego
@@ -158,12 +159,14 @@
         gameSocket.send(JSON.stringify({
             'type': "game_state"
         }));
-        // Dibuja la ventana de chat
-        drawChatbox()
         
         // Crea el form para enviar mensajes de chat
-        var element = this.add.dom(200, 575).createFromCache('form');
+        var element = this.add.dom(180, 575).createFromCache('form');
         element.setScale(2, 2);
+
+        // Crea un div para los mensajes de chat
+        var chatboxdiv = this.add.dom(20, 250).createFromCache('chatdiv');
+        chatboxdiv.setScale(1, 1);
 
         // Callback cuando pones una letra en el input de chat
         keyupChat = function (e) {
@@ -185,30 +188,6 @@
         element.addListener('keyup');
         element.on('keyup', keyupChat)
 
-    }
-
-    // Dibuja la ventana de chat
-    function drawChatbox() {
-        // Borra el grupo
-        if (chat_group == undefined) {
-            chat_group = scene.add.group(true, false)
-        } else {
-            chat_group.clear(true, true)
-        }
-
-        // Crea los objetos texto
-        // TODO Como empieza a mostrar desde el "principio", si los mensajes son largos a veces no te muestra el último mensaje enviado
-        var messages_left_to_display = Math.min(max_messages_displayed, chat_messages.length)
-        var next_offset = 300
-        i = 0
-        while (messages_left_to_display > 0) {
-            var last_text = scene.add.text(20, next_offset, chat_messages[chat_offset + i], {fontSize: chat_text_size, fontFamily: 'Arial', wordWrap: { width: word_wrap_width, useAdvancedWrap: true }})
-            var result = last_text.getWrappedText(chat_messages[chat_offset + i])
-            chat_group.add(last_text)
-            next_offset += result.length * 25
-            messages_left_to_display -= result.length
-            i++
-        }
     }
 
     // Se ejecuta cuando la partida termina
@@ -242,26 +221,15 @@
 <script>
 
 function appendToChatbox(message) {
-        // Chatbox de phaser
-        // Rompemos el mensaje en líneas
-        try {
-            var strings = example_text.getWrappedText(message)
-            // Por cada línea, lo añadimos a la lista
-            for (i = 0; i < strings.length; i++){
-                chat_messages.push(strings[i])
-                // Si ya se ha llenado el chat, hacemos scroll
-                if (chat_messages.length > max_messages_displayed){
-                    chat_offset += 1
-                }
-            }
-            // Es posible que esto se ejecute mientras Phaser no está preparado todavía
-            if (scene != undefined) {
-                drawChatbox()
-            }
-        } catch(err) {
-            console.log(err)
-        }
+    // Chatbox de phaser
+    try {
+        var cbdiv = document.getElementById("chatdiv")
+        cbdiv.innerHTML += message + "<br>"
+        cbdiv.scrollTop = cbdiv.scrollHeight
+    } catch(err) {
+        console.log(err)
     }
+}
 
     // Hace lo que haga falta cuando llega un mensaje
     gameSocket.onmessage = function(e) {
