--- a/game/static/game/match_list.html
+++ b/game/static/game/match_list.html
@@ -5,9 +5,9 @@
 {% block content %}
 
 {% if yours is not None %}
-<h2>
-    Your matches:
-</h2>
+
+<h2>Your matches</h2>
+
 <table class="matchmaking_table">
     <tr>
         <th>
