--- a/game/static/game/feedback.html
+++ b/game/static/game/feedback.html
@@ -8,7 +8,7 @@
     <h2>You can send any feedback or bug report about Pumba! here</h2>
 <form method="post" action="{% url 'feedback' %}">
     {% csrf_token %}
-    {{ form }}
+    {{ form.as_p }}
     <button type="submit">Send!</button>
 </form>
 </div>
