--- a/pumba/static/index.html
+++ b/pumba/static/index.html
@@ -2,12 +2,8 @@
 
 {% block content %}
 {% if user.is_authenticated %}
-    <p>Welcome, {{ user.username }}</p><br/>
-    <a href="authentication/logout">Logout</a><br/>
-    <a href="game/matchmaking">Matchmaking</a>
+    <p>Welcome back {{ user.username }}! <a href="{% url 'matchmaking' %}">Join a match?</a></p><br/>
 {% else %}
-    <p>Welcome!</p>
-    <a href="authentication/login">Login</a><br/>
-    <a href="authentication/register">Register</a>
+    <p>Welcome to Pumba! Please <a href="{% url 'login' %}">login</a><br/> or <a href="{% url 'register' %}">register</a> to play!</p>
 {% endif %}
 {% endblock %}
