--- a/authentication/static/authentication/login.html
+++ b/authentication/static/authentication/login.html
@@ -4,18 +4,12 @@
 
 <form method="post" action="{% url 'login' %}">
 {% csrf_token %}
-<table>
-<tr>
-    <td>{{ form.username.label_tag }}</td>
-    <td>{{ form.username }}</td>
-</tr>
-<tr>
-    <td>{{ form.password.label_tag }}</td>
-    <td>{{ form.password }}</td>
-</tr>
+<table style="margin-left:auto; margin-right:auto; clear: both;">
+    {{ form.as_table }}
 </table>
-
-<input type="submit" value="Login">
+<div style="float: center; text-align: center">
+    <button type="submit" class="menu-button">Login</button>
+</div>
 </form>
 
 {% endblock %}
