--- a/authentication/static/authentication/register.html
+++ b/authentication/static/authentication/register.html
@@ -8,26 +8,12 @@
 
 <form method="post" action="{% url 'register' %}">
 {% csrf_token %}
-<table>
-<tr>
-    <td>{{ form.username.label_tag }}</td>
-    <td>{{ form.username }}</td>
-</tr>
-<tr>
-    <td>{{ form.password.label_tag }}</td>
-    <td>{{ form.password }}</td>
-</tr>
-<tr>
-    <td>{{ form.confirm.label_tag }}</td>
-    <td>{{ form.confirm }}</td>
-</tr>
-<tr>
-    <td>{{ form.email.label_tag }}</td>
-    <td>{{ form.email }}</td>
-</tr>
+<table style="margin-left:auto; margin-right:auto; clear: both;">
+    {{ form.as_table }}
 </table>
-
-<input type="submit" value="Register">
+<div style="float: center; text-align: center">
+    <button type="submit" class="menu-button">Register</button>
+</div>
 </form>
 
 {% endblock %}
