--- a/pumba/static/base.html
+++ b/pumba/static/base.html
@@ -2,6 +2,7 @@
     <head>
         {% load static %}
         <meta charset="utf-8">
+        <link rel="shortcut icon" href="{%  static 'favicon.ico' %}">
         <title>Pumba!</title>
         <script src="{% static 'jquery-3.3.1.min.js' %}"></script>
         <link rel="stylesheet" type="text/css" href="{% static 'base.css' %}">
