--- a/game/static/game/match_list.html
+++ b/game/static/game/match_list.html
@@ -17,6 +17,9 @@
             Name
         </th>
         <th>
+            Status
+        </th>
+        <th>
             Player count
         </th>
         <th>
@@ -32,6 +35,7 @@
     {% for game in yours %}
     <tr>
         <th class="matchmaking_table_row">{{ game.name }}</th>
+        <th class="matchmaking_table_row">{{ game.status }}</th>
         <th class="matchmaking_table_row">{{ game.current_users }} / {{ game.max_users|sub:game.ai_count }}</th>
         <th class="matchmaking_table_row">{{ game.ai_count }}</th>
         <th class="matchmaking_table_row">
@@ -57,6 +61,9 @@
             Name
         </th>
         <th>
+            Status
+        </th>
+        <th>
             Player count
         </th>
         <th>
@@ -72,6 +79,7 @@
     {% for game in games %}
     <tr>
         <th class="matchmaking_table_row">{{ game.name }}</th>
+        <th class="matchmaking_table_row">{{ game.status }}</th>
         <th class="matchmaking_table_row">{{ game.current_users }} / {{ game.max_users|sub:game.ai_count }}</th>
         <th class="matchmaking_table_row">{{ game.ai_count }}</th>
         <th class="matchmaking_table_row">
