--- a/game/static/game/game_phaser.html
+++ b/game/static/game/game_phaser.html
@@ -8,6 +8,8 @@
 
 <script src = "{% static 'game/game_ui.js' %}"></script>
 
+<script src = "{% static 'game/game_anims.js' %}"></script>
+
 <div id="error-msg" class="error"></div>
 
 <div id="game-div"></div>
@@ -323,21 +325,28 @@ function startPlayingStates(){
         // Recogemos el estado siguiente
         game_state_index += 1
         var gstate = game_state_queue[game_state_index]
+        console.log(gstate)
 
         // TODO Hacemos animaciones y eso
         if (gstate != undefined) {
-            if(gstate['action'] != undefined){
-                // TODO Ponemos la animación correspondiente
-                if (gstate['current_player'] == playerIndex && gstate['action']['type'] == "end_turn" && gstate['action']['player'] != playerName){
-                    scene.sound.play("your-turn-sound")
+            // Si no ha pasado nada, repintamos directamente
+            if (gstate['action'] == undefined) {
+                // Repintamos la UI
+                updateGameFromState(gstate)
+                // Guardamos que hemos terminado
+                game_state_processing = false
+            // TODO Ponemos la animación correspondiente a lo que ha pasado
+            } else {
+                if (gstate['action']['type'] == "end_turn"){
+                    animateBeginTurn(gstate)
+                } else {
+                    // Repintamos la UI
+                    updateGameFromState(gstate)
+                    // Guardamos que hemos terminado
+                    game_state_processing = false
                 }
             }
         }
-        
-        // Repintamos la UI
-        updateGameFromState(gstate)
-        // Guardamos que hemos terminado
-        game_state_processing = false
     } else {
         // Si no había nada que hacer...
         game_state_processing = false
